--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -2,51 +2,52 @@
 <html>
 <head>
     <!-- Required meta tags -->
-    <meta charset='utf-8'>
-    <meta name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no'>
-
+    <meta charset = 'utf-8'>
+    <meta name = 'viewport' content = 'width = device-width, initial-scale = 1, shrink-to-fit = no'>
     <!-- Bootstrap CSS -->
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity='sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin='anonymous'>
-
-    <link rel='stylesheet' type='text/css' href='{{ url_for("static", filename="main.css") }}'>
+    <link rel = 'stylesheet' href = 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' integrity = 'sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm' crossorigin = 'anonymous'>
+    <link rel = 'stylesheet' type = 'text/css' href = '{{ url_for("static", filename = "main.css") }}'>
 
     {% if title %}
-        <title>Flask Blog - {{ title }}</title>
+        <title>Bill Handler - {{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>Bill Handler</title>
     {% endif %}
 </head>
 <body>
     <header class = 'site-header'>
         <nav class = 'navbar navbar-expand-md navbar-light bg-entegrity fixed-top'>
             <div class = 'container'>
-                <a class = 'navbar-brand mr-4 mb-1' href = '/'>Bill Parsing</a>
-                <button class = 'navbar-toggler' type = 'button' data-toggle='collapse' data-target='#navbarToggle' aria-controls='navbarToggle' aria-expanded='false' aria-label='Toggle navigation'>
+                <a class = 'navbar-title mr-4' href = '/'>Bill Handling Site</a>
+                <button class = 'navbar-toggler' type = 'button' data-toggle = 'collapse' data-target = '#navbarToggle' aria-controls = 'navbarToggle' aria-expanded = 'false' aria-label = 'Toggle navigation'>
                     <span class = 'navbar-toggler-icon'></span>
                 </button>
-                <div class='collapse navbar-collapse' id = 'navbarToggle'>
-                    <div class='navbar-nav mr-auto'>
-                        <a class = 'nav-item nav-link mb-1' href = '{{ url_for("home") }}'>Home</a>
-                        <a class = 'nav-item nav-link mb-1' href = '{{ url_for("about") }}'>About</a>
+                <div class = 'collapse navbar-collapse' id = 'navbarToggle'>
+                    <div class = 'navbar-nav mr-auto'>
+                        <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("main_bp.home") }}'>Home</a>
+                        <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("main_bp.about") }}'>About</a>
+                        {% if current_user.is_authenticated %}
+                            <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("post_bp.new_post") }}'>New Post</a>
+                        {% endif %}
                     </div>
                     <!-- Navbar Right Side -->
-                    <div class='navbar-nav'>
+                    <div class = 'navbar-nav'>
                         {% if current_user.is_authenticated %}
-                            <a class = 'nav-item nav-link mb-1' href = '{{ url_for("account") }}'>Account</a>
-                            <a class = 'nav-item nav-link mb-1' href = '{{ url_for("logout") }}'>Log Out</a>
+                            <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("user_bp.account") }}'>Account</a>
+                            <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("user_bp.logout") }}'>Log Out</a>
                         {% else %}
-                            <a class = 'nav-item nav-link mb-1' href = '{{ url_for("login") }}'>Log In</a>
-                            <a class = 'nav-item nav-link mb-1' href = '{{ url_for("register") }}'>Register</a>
+                            <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("user_bp.login") }}'>Log In</a>
+                            <a class = 'navbar-link mt-1 mb-1' href = '{{ url_for("user_bp.register") }}'>Register</a>
                         {% endif %}
-                        <img src = 'https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/302134206_512288134233486_5107875770930563823_n.png?stp=dst-jpg&_nc_cat=105&ccb=1-7&_nc_sid=174925&_nc_ohc=HsY9zjtLXJsAX_oUHVi&_nc_ht=scontent-dfw5-1.xx&oh=00_AfBOlTiae71dWQ38Uoegf2_uLMLLdp_0WJ9dWXoFfis8cQ&oe=6490015A' alt = 'Entegrity Logo' width = '35' height = '35'>
+                        <img src = '{{ url_for("static", filename = "profile_pics/e.png") }}' alt = 'Logo' width = '45' height = '45'>
                     </div>
                 </div>
             </div>
         </nav>
     </header>
-    <main role='main' class = 'container'>
-        <div class='row'>
-            <div class='col-md-8'>
+    <main role = 'main' class = 'container'>
+        <div class = 'row'>
+            <div class = 'col-md-8'>
                 {% with messages = get_flashed_messages(with_categories = True) %}
                     {% if messages %}  
                         {% for category, message in messages %}
@@ -58,26 +59,24 @@
                 {% endwith %}
                 {% block content %}{% endblock %}
             </div>
-            <div class='col-md-4'>
-                <div class='content-section'>
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
-                        <ul class='list-group'>
-                            <li class='list-group-item list-group-item-light'>Latest Posts</li>
-                            <li class='list-group-item list-group-item-light'>Announcements</li>
-                            <li class='list-group-item list-group-item-light'>Calendars</li>
-                            <li class='list-group-item list-group-item-light'>etc</li>
+            <div class = 'col-md-4'>
+                <div class = 'content-format'>
+                    <h3>Sidebar</h3>
+                        <ul class = 'list-group'>
+                            <li class = 'list-group-item clickable-color text-muted'>Automatic Entry</li>
+                            <li class = 'list-group-item clickable-color text-muted'>Manual Entry</li>
+                            <li class = 'list-group-item clickable-color text-muted'>Corrections</li>
+                            <li class = 'list-group-item clickable-color text-muted'>View Data</li>
                         </ul>
-                    </p>
                 </div>
             </div>
         </div>
     </main>
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src='https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity='sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin='anonymous'></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity='sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin='anonymous'></script>
-    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity='sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin='anonymous'></script>
+    <script src = 'https://code.jquery.com/jquery-3.2.1.slim.min.js' integrity = 'sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN' crossorigin = 'anonymous'></script>
+    <script src = 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js' integrity = 'sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q' crossorigin = 'anonymous'></script>
+    <script src = 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js' integrity = 'sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl' crossorigin = 'anonymous'></script>
 </body>
 </html>
 
