--- a/website/templates/users/register.html
+++ b/website/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
-    <div class = 'content-section'>
+    <div class = 'content-format'>
         <form method = 'POST' action = ''>
             {{ form.hidden_tag() }}
             <fieldset class = 'form-group'>
@@ -19,7 +19,7 @@
                         {{ form.username(class = 'form-control form-control-lg') }}
                     {% endif %}
                 </div>
-                <div class='form-group'>
+                <div class = 'form-group'>
                     {{ form.email.label(class = 'form-control-label') }}
                     {% if form.email.errors %}
                         {{ form.email(class = 'form-control form-control-lg is-invalid') }}
@@ -32,7 +32,7 @@
                         {{ form.email(class = 'form-control form-control-lg') }}
                     {% endif %}
                 </div>
-                <div class='form-group'>
+                <div class = 'form-group'>
                     {{ form.password.label(class = 'form-control-label') }}
                     {% if form.password.errors %}
                         {{ form.password(class = 'form-control form-control-lg is-invalid') }}
@@ -60,13 +60,13 @@
                 </div>
             </fieldset>
             <div class = 'form-group'>
-                {{ form.submit(class = 'btn btn-outline-button') }}
+                {{ form.submit(class = 'button-format') }}
             </div>
         </form>    
     </div>
     <div class = 'border-top pt-3'>
         <small class = 'text-muted'>
-            Already have an account? <a class = 'ml-2' href = '{{ url_for("login") }}'>Sign In</a>
+            Already have an account? <a class = 'ml-2' href = '{{ url_for("user_bp.login") }}'>Sign In</a>
         </small>
     </div>
 {% endblock content %}
